--- a/SocialPlay-server/build.gradle
+++ b/SocialPlay-server/build.gradle
@@ -25,7 +25,7 @@ dependencies {
   compile externalDependency.apache_httpcore
   runtime externalDependency.slf4jLog4j12
   runtime externalDependency.log4j
-  runtime files('libs/commons-logging-1.1.3.jar', 'libs/jackson-databind-2.3.2.jar', 'libs/jackson-core-2.3.2.jar', 'libs/jackson-annotations-2.3.0.jar', 'libs/httpclient-4.3.jar', 'libs/httpcore-4.3.jar', 'libs/joda-time-2.2.jar', 'libs/aws-java-sdk-ses-1.9.30.jar')
+  runtime files('libs/commons-logging-1.1.3.jar', 'libs/jackson-databind-2.3.2.jar', 'libs/jackson-core-2.3.2.jar', 'libs/jackson-annotations-2.3.0.jar', 'libs/httpclient-4.3.jar', 'libs/httpcore-4.3.jar', 'libs/joda-time-2.2.jar', 'libs/aws-java-sdk-ses-1.9.30.jar', 'libs/mysql-connector-java-5.1.35-bin.jar')
   testCompile externalDependency.testng
   testCompile externalDependency.easymock
 }
