--- a/SocialPlay-server/build.gradle
+++ b/SocialPlay-server/build.gradle
@@ -12,7 +12,6 @@ dependencies {
   compile externalDependency.parseq
   compile externalDependency.zookeeper
   compile externalDependency.scalaLibrary_2_11
-//  compile externalDependency.aws_java_sdk
   compile externalDependency.aws_java_sdk_ses
   compile externalDependency.aws_java_sdk_core
   compile externalDependency.twilio_sdk
@@ -23,9 +22,10 @@ dependencies {
   }
   compile externalDependency.apache_httpclient
   compile externalDependency.apache_httpcore
+  compile files('libs/commons-codec-1.10.jar')
   runtime externalDependency.slf4jLog4j12
   runtime externalDependency.log4j
-  runtime files('libs/commons-logging-1.1.3.jar', 'libs/jackson-databind-2.3.2.jar', 'libs/jackson-core-2.3.2.jar', 'libs/jackson-annotations-2.3.0.jar', 'libs/httpclient-4.3.jar', 'libs/httpcore-4.3.jar', 'libs/joda-time-2.2.jar', 'libs/aws-java-sdk-ses-1.9.30.jar', 'libs/mysql-connector-java-5.1.35-bin.jar')
+  runtime files('libs/commons-logging-1.1.3.jar', 'libs/jackson-databind-2.3.2.jar', 'libs/jackson-core-2.3.2.jar', 'libs/jackson-annotations-2.3.0.jar', 'libs/httpclient-4.3.jar', 'libs/httpcore-4.3.jar', 'libs/joda-time-2.2.jar', 'libs/aws-java-sdk-ses-1.9.30.jar', 'libs/mysql-connector-java-5.1.35-bin.jar', 'libs/commons-codec-1.10.jar')
   testCompile externalDependency.testng
   testCompile externalDependency.easymock
 }
